# VinayNextLeap

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements-streamlit.txt  requirements.txt  start.sh  vercel.json
Docs/: Phase Wise Architecture.md
Source/phase_1/: config.py  data_loader.py
Source/phase_2/: models.py
Source/phase_3/: filter.py
Source/phase_4/: __init__.py  config.py
Source/phase_5/: api.py  merge.py
Source/phase_6/: main.py
app/phase_1/: __init__.py
app/phase_2/: __init__.py
app/phase_3/: __init__.py
app/phase_4/: llm.py
app/phase_5/: __init__.py  deps.py  schemas.py
app/phase_6/: __init__.py  main.py
scripts/: run_server.ps1
tests/: test_phase4_llm_connection.py  test_phase5_api.py
web/: app.js  index.html  styles.css
