[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zomato-restaurant-recommendation"
version = "0.1.0"
description = "AI-powered restaurant recommendation (phase-wise build)"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.16.0",
    "fastapi>=0.100.0",
    "groq>=0.4.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.22.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.24.0", "pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "web*", "scripts*", "Docs*"]
